[gd_scene load_steps=11 format=3 uid="uid://d3mtd4qql07ap"]

[ext_resource type="Script" uid="uid://r5uefevdalpv" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="Texture2D" uid="uid://b0xxr68pnlauq" path="res://assets/DareWheel.png" id="2_lbhrr"]
[ext_resource type="Texture2D" uid="uid://c6s751pvqh4ct" path="res://assets/TruthWheel.png" id="3_iywne"]
[ext_resource type="Texture2D" uid="uid://cw0yq6jqcongf" path="res://assets/pointerForSpin.png" id="3_lbhrr"]
[ext_resource type="FontFile" uid="uid://oy5cqo7iv8gg" path="res://assets/PixelOperator8-Bold.ttf" id="5_p57ef"]
[ext_resource type="FontFile" uid="uid://m8fsnwreikvx" path="res://assets/PixelOperator8.ttf" id="6_u5sy4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p57ef"]
bg_color = Color(0.245056, 0.531483, 0.928756, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5sy4"]
bg_color = Color(0.243137, 0.533333, 0.929412, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0tnpc"]
bg_color = Color(0.243137, 0.533333, 0.929412, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gee14"]
bg_color = Color(0.346072, 0.601689, 0.960901, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="game" type="Node2D"]
position = Vector2(2, 4)
script = ExtResource("1_uwrxv")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 2.0
offset_top = -3.0
offset_right = 717.0
offset_bottom = 1270.0
color = Color(0.0313726, 0.0745098, 0.109804, 1)

[node name="WheelContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="DareWheel" type="TextureRect" parent="WheelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = 203.0
offset_right = 681.0
offset_bottom = 857.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(327, 327)
texture = ExtResource("2_lbhrr")

[node name="TruthWheel" type="TextureRect" parent="WheelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = 200.0
offset_right = 677.0
offset_bottom = 854.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(327, 327)
texture = ExtResource("3_iywne")

[node name="Pointer" type="TextureRect" parent="WheelContainer"]
z_index = 1
layout_mode = 0
offset_left = 95.0
offset_top = 224.0
offset_right = 595.0
offset_bottom = 724.0
texture = ExtResource("3_lbhrr")
stretch_mode = 2

[node name="SpinButton" type="Button" parent="WheelContainer"]
layout_mode = 0
offset_left = 205.0
offset_top = 835.0
offset_right = 527.0
offset_bottom = 947.0
theme_override_fonts/font = ExtResource("5_p57ef")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_p57ef")
theme_override_styles/hover = SubResource("StyleBoxFlat_u5sy4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0tnpc")
theme_override_styles/normal = SubResource("StyleBoxFlat_gee14")
text = "Spin"

[node name="NextPlayer" type="Button" parent="WheelContainer"]
layout_mode = 0
offset_left = 429.0
offset_top = 1104.0
offset_right = 677.0
offset_bottom = 1179.0
theme_override_fonts/font = ExtResource("6_u5sy4")
theme_override_font_sizes/font_size = 28
text = "Next"

[node name="TurnLabel" type="Label" parent="."]
offset_left = 84.0
offset_top = 147.0
offset_right = 646.0
offset_bottom = 220.0
size_flags_vertical = 1
theme_override_constants/line_spacing = 2
theme_override_fonts/font = ExtResource("6_u5sy4")
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="WheelContainer/SpinButton" to="." method="_on_spin_button_pressed"]
[connection signal="pressed" from="WheelContainer/NextPlayer" to="." method="_on_next_player_pressed"]
